--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,14 @@
 # certificats pour le site en production. Pour essayer de contourner le problème
 # on créer un nouveau "site" qui se contente de faire une redirection
 # transparante.
+
+[[redirects]]
+  from = "https://mycompanyinfrance.fr/*"
+  to = "https://1832-en--mon-entreprise.netlify.app/:splat"
+  status = 200
+
 [[redirects]]
   from = "*"
   to = "https://1832--mon-entreprise.netlify.app/:splat"
   status = 200
+  
