--- a/netlify.toml
+++ b/netlify.toml
@@ -8,8 +8,30 @@
   to = "https://1832-en--mon-entreprise.netlify.app/:splat"
   status = 200
 
+
+# Embauche redirection settings
+[[redirects]]
+  from = "https://mon-entreprise.fr/simulation"
+  to = "https://mon-entreprise.urssaf.fr/s%C3%A9curit%C3%A9-sociale/salari%C3%A9"
+  status = 301
+
+## Old iframe adress
+[[redirects]]
+  from = "https://mon-entreprise.fr/modules/v2/dist/simulateur.js"
+  to = "https://mon-entreprise.fr/simulateur-iframe-integration.js"
+  status = 301
+
+[[redirects]]
+  from = "https://mon-entreprise.fr/dist/simulateur.js"
+  to = "https://mon-entreprise.fr/simulateur-iframe-integration.js"
+  status = 301
+
+
+
 [[redirects]]
   from = "*"
   to = "https://1832--mon-entreprise.netlify.app/:splat"
   status = 200
-  
+ 
+[[redirects]]
+  from = "
