Redirection vers le nouveau site mon-entreprise.urssaf.fr

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,21 +8,21 @@
   to = "https://1832-en--mon-entreprise.netlify.app/:splat"
   status = 200
   
-## Twemoji proxy for client privacy #1219
-[[redirects]]
-  from = "/twemoji/*"
-  to = "https://twemoji.maxcdn.com/:splat"
-  status = 200
 
-# Old iframe adress
+[[redirects]]
+  from = "https://mon-entreprise.fr/*"
+  to = "https://mon-entreprise.urssaf.fr/:splat"
+  status = 301
+
+
 [[redirects]]
   from = "https://mon-entreprise.fr/modules/v2/dist/simulateur.js"
-  to = "https://mon-entreprise.fr/simulateur-iframe-integration.js"
+  to = "https://mon-entreprise.urssaf.fr/simulateur-iframe-integration.js"
   status = 301
 
 [[redirects]]
   from = "https://mon-entreprise.fr/dist/simulateur.js"
-  to = "https://mon-entreprise.fr/simulateur-iframe-integration.js"
+  to = "https://mon-entreprise.urssaf.fr/simulateur-iframe-integration.js"
   status = 301
 
 
