--- a/netlify.toml
+++ b/netlify.toml
@@ -7,21 +7,31 @@
 
 [[redirects]]
   from = "https://mon-entreprise.fr/modules/v2/dist/simulateur.js"
-  to = "https://mon-entreprise.urssaf.fr/simulateur-iframe-integration.js"
+  to = "https://2432--mon-entreprise.netlify.app/simulateur-iframe-integration.js"
   status = 301
 
 [[redirects]]
   from = "https://mon-entreprise.fr/dist/simulateur.js"
-  to = "https://mon-entreprise.urssaf.fr/simulateur-iframe-integration.js"
+  to = "https://2432--mon-entreprise.netlify.app/simulateur-iframe-integration.js"
   status = 301
 
 [[redirects]]
   from = "https://mon-entreprise.fr/*"
-  to = "https://mon-entreprise.urssaf.fr/:splat"
+  to = "https://2432--mon-entreprise.netlify.app/:splat"
   status = 301
   
 [[redirects]]
   from = "https://mycompanyinfrance.fr/*"
-  to = "https://mycompanyinfrance.urssaf.fr/:splat"
+  to = "https://2432--mon-entreprise.netlify.app/:splat"
   status = 301
+  
+[[redirects]]
+  from = "https://mycompanyinfrance.urssaf.fr/*"
+  to = "https://2432--mon-entreprise.netlify.app/:splat"
+  status = 200
+  
+[[redirects]]
+  from = "https://mon-entreprise.urssaf.fr/*"
+  to = "https://2432--mon-entreprise.netlify.app/:splat"
+  status = 200
   
