--- a/netlify.toml
+++ b/netlify.toml
@@ -1,37 +1,25 @@
-# La configuration Netlify est cassée et l'hebergeur ne fournit les bons
-# certificats pour le site en production. Pour essayer de contourner le problème
-# on créer un nouveau "site" qui se contente de faire une redirection
-# transparante.
-
-
+# Le projet "mon-entreprise.fr" se contente de faire une redirection 301 vers
+# les nouveaux domaines en *.urssaf.fr. Il y a 2 projets distincts sur Netlify
+# car le site "mon-entreprise.fr" utilise un certificat let's encrypt tandis que
+# les nouveaux noms de domaines en *.urssaf.fr utilisent un certificat dédié.
 
 [[redirects]]
   from = "https://mon-entreprise.fr/modules/v2/dist/simulateur.js"
-  to = "https://2432--mon-entreprise.netlify.app/simulateur-iframe-integration.js"
-  status = 302
+  to = "https://mon-entreprise.urssaf.fr/simulateur-iframe-integration.js"
+  status = 301
 
 [[redirects]]
   from = "https://mon-entreprise.fr/dist/simulateur.js"
-  to = "https://2432--mon-entreprise.netlify.app/simulateur-iframe-integration.js"
-  status = 302
+  to = "https://mon-entreprise.urssaf.fr/simulateur-iframe-integration.js"
+  status = 301
 
 [[redirects]]
   from = "https://mon-entreprise.fr/*"
-  to = "https://2432--mon-entreprise.netlify.app/:splat"
-  status = 302
+  to = "https://mon-entreprise.urssaf.fr/:splat"
+  status = 301
   
 [[redirects]]
   from = "https://mycompanyinfrance.fr/*"
-  to = "https://2432-en--mon-entreprise.netlify.app/:splat"
-  status = 302
-  
-[[redirects]]
-  from = "https://mycompanyinfrance.urssaf.fr/*"
-  to = "https://2432-en--mon-entreprise.netlify.app/:splat"
-  status = 200
-  
-[[redirects]]
-  from = "https://mon-entreprise.urssaf.fr/*"
-  to = "https://2432--mon-entreprise.netlify.app/:splat"
-  status = 200
+  to = "https://mycompanyinfrance.urssaf.fr/:splat"
+  status = 301
   
